// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`[console] languages list 1`] = `
{
  "node": {
    "__typename": "Organization",
    "languages": {
      "__typename": "EnabledLanguageConnection",
      "edges": [
        {
          "__typename": "EnabledLanguageEdge",
          "node": {
            "__typename": "EnabledLanguage",
            "active": {
              "active": true,
            },
            "language": {
              "code": "es",
            },
            "primary": true,
          },
        },
        {
          "__typename": "EnabledLanguageEdge",
          "node": {
            "__typename": "EnabledLanguage",
            "active": {
              "active": true,
            },
            "language": {
              "code": "en",
            },
            "primary": false,
          },
        },
      ],
      "pageInfo": {
        "__typename": "PageInfo",
        "hasNextPage": false,
        "hasPreviousPage": false,
      },
      "totalCount": 2,
    },
  },
}
`;

exports[`[console] languages add 1`] = `
{
  "enableLanguage": {
    "__typename": "EnabledLanguageEdge",
    "node": {
      "__typename": "EnabledLanguage",
      "active": {
        "__typename": "ActivationStatus",
        "active": true,
      },
      "language": {
        "__typename": "Language",
        "code": "fr",
      },
      "primary": false,
    },
  },
}
`;

exports[`[console] languages add 2`] = `
{
  "node": {
    "__typename": "Organization",
    "languages": {
      "__typename": "EnabledLanguageConnection",
      "edges": [
        {
          "__typename": "EnabledLanguageEdge",
          "node": {
            "__typename": "EnabledLanguage",
            "active": {
              "active": true,
            },
            "language": {
              "code": "es",
            },
            "primary": true,
          },
        },
        {
          "__typename": "EnabledLanguageEdge",
          "node": {
            "__typename": "EnabledLanguage",
            "active": {
              "active": true,
            },
            "language": {
              "code": "en",
            },
            "primary": false,
          },
        },
        {
          "__typename": "EnabledLanguageEdge",
          "node": {
            "__typename": "EnabledLanguage",
            "active": {
              "active": true,
            },
            "language": {
              "code": "fr",
            },
            "primary": false,
          },
        },
      ],
      "pageInfo": {
        "__typename": "PageInfo",
        "hasNextPage": false,
        "hasPreviousPage": false,
      },
      "totalCount": 3,
    },
  },
}
`;
